preventing dragging x on mobile

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,5 +1,4 @@
 .home-background {
-    position: absolute;
     border-radius: 50px; /* Adjust the radius to your preference */
     width: 100%;
     height: 100vh;
